<resources>
    <string name="app_name">My Application</string>
    <string name="welcome">欢迎使用应急救援志愿者队伍信息管理系统!</string>
    <string name="enter">进入</string>
    <string name="Operation">操作</string>
    <string name="query">查询</string>
    <string name="about">关于</string>
    <string name="about_desc">应急救援志愿者队伍信息管理系统是一款专门为应急救援志愿者队伍打造的信息管理软件。它可以有效提高救援队伍的管理效率，为救援工作提供有力的保障。</string>
    <string name="add_info">添加信息</string>
    <string name="remove_info">移除信息</string>
    <string name="update_info">修改信息</string>
    <string name="query_info">查询信息</string>
    <string name="rescuer_name_required">姓名(必填)</string>
    <string name="rescuer_age_required">年龄(必填)</string>
    <string name="rescuer_desc_nullable">介绍(选填)</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="add_success">添加成功</string>
    <string name="add_fail">添加失败</string>
    <string name="add_fail_too_long_desc">添加失败!描述过长!</string>
    <string name="rescuer_name">姓名</string>
    <string name="rescuer_age">年龄</string>
    <string name="sid">Sid</string>
    <string name="remove_confirm">确定删除么</string>
    <string name="remove_success">删除成功</string>
    <string name="update_success">修改成功</string>
</resources>