<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/buttonBgColor"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/_InputEditTextName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/rescuer_name_required"
            android:textColorHint="@color/gray" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <EditText
            android:id="@+id/_EditTextAge"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/rescuer_age_required"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="240dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/_InputEditTextDesc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/rescuer_desc_nullable"
            android:textColorHint="@color/gray" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/_BtnConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@color/buttonBgColor"
            android:text="@string/confirm"
            android:textColor="@color/textColorRed" />

        <Button
            android:id="@+id/_BtnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@color/buttonBgColor"
            android:text="@string/cancel"
            android:textColor="@color/textColorRed" />

    </LinearLayout>
</LinearLayout>