<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/listview_adapter"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/listview_adapter_ll1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/_TxtSid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sid" />

        <TextView
            android:id="@+id/_TxtName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/rescuer_name" />

        <TextView
            android:id="@+id/_TxtAge"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/rescuer_age" />
    </LinearLayout>
</LinearLayout>