<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/p1">

    <Button
        android:id="@+id/_BtnAddInfo"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@color/buttonBgColor"
        android:text="@string/add_info"
        android:textColor="@color/textColorRed"
        android:textSize="20sp" />

    <Button
        android:id="@+id/_BtnRemoveInfo"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_below="@id/_BtnAddInfo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@color/buttonBgColor"
        android:text="@string/remove_info"
        android:textColor="@color/textColorRed"
        android:textSize="20sp" />

    <Button
        android:id="@+id/_BtnUpdateInfo"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_below="@id/_BtnRemoveInfo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@color/buttonBgColor"
        android:text="@string/update_info"
        android:textColor="@color/textColorRed"
        android:textSize="20sp" />
</RelativeLayout>