<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/query_item_ll1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/query_item_ll1_tv1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@color/buttonBgColor"
            android:gravity="center"
            android:text="@string/sid" />

        <TextView
            android:id="@+id/query_item_ll1_tv2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@color/buttonBgColor"
            android:gravity="center"
            android:text="@string/rescuer_name" />

        <TextView
            android:id="@+id/query_item_ll1_tv3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="@color/buttonBgColor"
            android:gravity="center"
            android:text="@string/rescuer_age" />
    </LinearLayout>

    <ListView
        android:id="@+id/_LvRescuer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>