<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/_ActivityMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/_FrameLayoutContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/_LayoutTabGroup"
        android:background="@drawable/p1" />

    <LinearLayout
        android:id="@+id/_LayoutTabGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/blue"
        android:orientation="horizontal">

        <Button
            android:id="@+id/_BtnOperation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@color/buttonBgColor"
            android:text="@string/Operation"
            android:textColor="#f12d2d" />

        <Button
            android:id="@+id/_BtnQuery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@color/buttonBgColor"
            android:paddingStart="2dp"
            android:text="@string/query"
            android:textColor="#f12d2d"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/_BtnAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/buttonBgColor"
            android:paddingStart="2dp"
            android:text="@string/about"
            android:textColor="#f12d2d"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
</RelativeLayout>
